fixed script, overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ a:hover{
 #content {
 	margin: 0 auto;
 	width: 80%;
-	overflow: auto;
+	overflow-y: auto;
 }
 #title {
 	font-size: 30pt;
@@ -69,7 +69,6 @@ height: 10%;
 
 #links{
 background-color: rgb(40,66,105);
-width: 100%;
 top: 0px;
 z-index: 10;
 font-size: 28px;
@@ -89,6 +88,7 @@ box-shadow: 2px 0px 20px black inset;
 header {
 	background-color: rgb(40,66,105);
 	color: lightgray;
+	overflow-y: auto;
 }
 header a:link{
 	text-decoration: none;
